Return to old namespaces

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "appchan-x",
+  "name": "4chan-x",
   "version": "1.1.0",
   "author": "Zixaphir<zixaphirmoxphar@gmail.com>",
   "description": "The most comprehensive 4chan userscript",
