--- a/package.json
+++ b/package.json
@@ -3,14 +3,13 @@
   "version": "3.0.0",
   "description": "Cross-browser userscript for maximum lurking on 4chan.",
   "meta": {
-    "name": "4chan X Alpha",
+    "name": "4chan X Beta",
     "repo": "https://github.com/MayhemYDG/4chan-x/",
     "page": "http://mayhemydg.github.com/4chan-x/",
     "mainBranch": "v3",
     "files": {
       "metajs": "4chan_x.meta.js",
-      "userjs": "4chan_x.user.js",
-      "latestjs": "latestv3.js"
+      "userjs": "4chan_x.user.js"
     }
   },
   "devDependencies": {
