--- a/package.json
+++ b/package.json
@@ -14,10 +14,10 @@
   },
   "devDependencies": {
     "grunt": "~0.4.0",
-    "grunt-bump": "~0.0.x",
+    "grunt-bump": "~0.0.0",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-coffee": "~0.4.0",
-    "grunt-contrib-concat": "~0.1.2",
+    "grunt-contrib-concat": "~0.1.0",
     "grunt-contrib-watch": "~0.2.0",
     "grunt-exec": "~0.4.0"
   },
