--- a/package.json
+++ b/package.json
@@ -8,10 +8,13 @@
     "url": "https://github.com/zixaphir/appchan-x.git"
   },
   "dependencies": {
+    "grunt": "0.4.x",
     "grunt-bump": "0.0.x",
-    "grunt-contrib-clean": "0.3.x",
-    "grunt-contrib-coffee": "0.3.x",
-    "grunt-exec": "0.3.x",
+    "grunt-contrib-concat": "0.1.x",
+    "grunt-contrib-clean": "0.4.x",
+    "grunt-contrib-coffee": "0.4.x",
+    "grunt-contrib-uglify": "0.1.x",
+    "grunt-exec": "0.4.x",
     "grunt-image-embed": "0.0.x"
   },
   "license": "MIT",
