--- a/package.json
+++ b/package.json
@@ -26,6 +26,9 @@
     "url": "git://github.com/MayhemYDG/4chan-x.git"
   },
   "author": "Nicolas Stepien <stepien.nicolas@gmail.com>",
+  "contributors": [
+    "James Campos <james.r.campos@gmail.com>"
+  ],
   "license": "MIT",
   "readmeFilename": "README.md",
   "engines": {
