Make Chrome ext/userscript/userjs builds.

--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "repo": "https://github.com/MayhemYDG/4chan-x/",
     "page": "http://mayhemydg.github.com/4chan-x/",
     "mainBranch": "v3",
-    "files": {
-      "metajs": "4chan_x.meta.js",
-      "userjs": "4chan_x.user.js"
-    }
+    "matches": [
+      "*://api.4chan.org/*",
+      "*://boards.4chan.org/*",
+      "*://images.4chan.org/*",
+      "*://sys.4chan.org/*"
+    ]
   },
   "devDependencies": {
     "grunt": "~0.4.0",
