--- a/package.json
+++ b/package.json
@@ -15,12 +15,13 @@
     ]
   },
   "devDependencies": {
-    "grunt": "~0.4.0",
+    "grunt": "~0.4.1",
     "grunt-bump": "~0.0.0",
     "grunt-contrib-clean": "~0.4.0",
-    "grunt-contrib-coffee": "~0.6.2",
-    "grunt-contrib-concat": "~0.1.0",
-    "grunt-contrib-watch": "~0.3.0",
+    "grunt-contrib-coffee": "~0.6.3",
+    "grunt-contrib-compress": "~0.4.4",
+    "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-watch": "~0.3.1",
     "grunt-exec": "~0.4.0"
   },
   "repository": {
