--- a/src/manifest.json
+++ b/src/manifest.json
@@ -3,6 +3,11 @@
   "version": "<%= version %>",
   "manifest_version": 2,
   "description": "<%= description %>",
+  "icons": {
+    "16": "icon16.png",
+    "48": "icon48.png",
+    "128": "icon128.png"
+  },
   "content_scripts": [{
     "js": ["script.js"],
     "matches": <%= JSON.stringify(meta.matches) %>,
