--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "grunt-contrib-coffee": "~0.6.3",
     "grunt-contrib-compress": "~0.4.4",
     "grunt-contrib-concat": "~0.1.3",
+    "grunt-contrib-copy": "~0.4.0",
     "grunt-contrib-watch": "~0.3.1",
     "grunt-exec": "~0.4.0"
   },
