Notify users of available updates. #968

--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "name": "4chan X Beta",
     "repo": "https://github.com/MayhemYDG/4chan-x/",
     "page": "https://4chan-x.just-believe.in/",
+    "buildsPath": "builds/",
     "mainBranch": "v3",
     "matches": [
       "*://api.4chan.org/*",
