--- a/src/manifest.json
+++ b/src/manifest.json
@@ -14,5 +14,8 @@
     "run_at": "document_start"
   }],
   "homepage_url": "<%= meta.page %>",
-  "minimum_chrome_version": "25"
+  "minimum_chrome_version": "25",
+  "permissions": [
+    "storage"
+  ]
 }
