--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "4chan-X",
   "version": "3.0.0",
-  "description": "Cross-browser userscript for maximum lurking on 4chan.",
+  "description": "Cross-browser extension for productive lurking on 4chan.",
   "meta": {
     "name": "4chan X Beta",
     "repo": "https://github.com/MayhemYDG/4chan-x/",
