--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "3.0.0",
   "description": "Cross-browser extension for productive lurking on 4chan.",
   "meta": {
-    "name": "4chan X Beta",
+    "name": "4chan X",
     "repo": "https://github.com/MayhemYDG/4chan-x/",
     "page": "https://4chan-x.just-believe.in/",
     "buildsPath": "builds/",
