--- a/src/manifest.json
+++ b/src/manifest.json
@@ -11,6 +11,7 @@
   "content_scripts": [{
     "js": ["script.js"],
     "matches": <%= JSON.stringify(meta.matches) %>,
+    "all_frames": true,
     "run_at": "document_start"
   }],
   "homepage_url": "<%= meta.page %>",
