--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
   "devDependencies": {
     "grunt": "~0.4.1",
     "grunt-bump": "~0.0.0",
+    "grunt-concurrent": "~0.1.1",
     "grunt-contrib-clean": "~0.4.0",
     "grunt-contrib-coffee": "~0.6.6",
     "grunt-contrib-compress": "~0.4.10",
