--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
     "grunt-contrib-concat": "~0.2.0",
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-watch": "~0.3.1",
-    "grunt-exec": "~0.4.0"
+    "grunt-shell": "~0.2.2"
   },
   "repository": {
     "type": "git",
