--- a/builds/crx/manifest.json
+++ b/builds/crx/manifest.json
@@ -1,8 +1,8 @@
 {
-  "name": "4chan x",
+  "name": "4chan X",
   "version": "1.1.0",
   "manifest_version": 2,
-  "description": "The most comprehensive 4chan userscript",
+  "description": "Cross-browser userscript for maximum lurking on 4chan.",
   "icons": {
     "16": "icon16.png",
     "48": "icon48.png",
