--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "name": "4chan X",
     "repo": "https://github.com/seaweedchan/4chan-x/",
     "page": "http://seaweedchan.github.io/4chan-x/",
+    "buildsPath": "builds/",
     "mainBranch": "master",
     "matches": [
       "*://api.4chan.org/*",
