Fix update and download URLs

--- a/package.json
+++ b/package.json
@@ -15,8 +15,8 @@
       "*://sys.4chan.org/*"
     ],
     "files": {
-      "metajs": "4chan_X.meta.js",
-      "userjs": "4chan_X.user.js"
+      "metajs": "4chan-X.meta.js",
+      "userjs": "4chan-X.user.js"
     }
   },
   "devDependencies": {
