--- a/package.json
+++ b/package.json
@@ -16,8 +16,8 @@
       "*://sys.4chan.org/*"
     ],
     "files": {
-      "metajs": "4chan-X.meta.js",
-      "userjs": "4chan-X.user.js"
+      "metajs": "appchan-x.meta.js",
+      "userjs": "appchan-x.user.js"
     }
   },
   "devDependencies": {
