Remove some unwanted changes

--- a/.gitignore
+++ b/.gitignore
@@ -3,6 +3,5 @@ node_modules/
 *.db
 tmp-crx/
 tmp-userscript/
-builds/4chan-X-Chrome.zip
-builds/4chan-X-Opera.nex
+builds/4chan-X.zip
 Gruntfile.js
