--- a/package.json
+++ b/package.json
@@ -26,7 +26,7 @@
     "grunt-contrib-copy": "~0.4.1",
     "grunt-contrib-watch": "~0.5.0",
     "grunt-shell": "~0.3.1",
-    "matchdep": "~0.1.2"
+    "load-grunt-tasks": "~0.1.0"
   },
   "repository": {
     "type": "git",
