--- a/package.json
+++ b/package.json
@@ -16,7 +16,7 @@
     ]
   },
   "devDependencies": {
-    "font-awesome": "git://github.com/MayhemYDG/Font-Awesome.git#df4285951124f9ca1f3907438462e5ba9e464bcb",
+    "font-awesome": "https://github.com/FortAwesome/Font-Awesome/archive/v4.0.0.tar.gz",
     "grunt": "~0.4.1",
     "grunt-bump": "~0.0.11",
     "grunt-concurrent": "~0.4.0",
