Start working on remote upload (Chrome-only so far)

--- a/builds/crx/manifest.json
+++ b/builds/crx/manifest.json
@@ -17,6 +17,8 @@
   "homepage_url": "http://seaweedchan.github.io/4chan-x/",
   "minimum_chrome_version": "31",
   "permissions": [
-    "storage"
+    "storage",
+    "http://*/",
+    "https://*/"
   ]
 }
