--- a/builds/crx/manifest.json
+++ b/builds/crx/manifest.json
@@ -1,6 +1,6 @@
 {
   "name": "4chan X",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "manifest_version": 2,
   "description": "Cross-browser userscript for maximum lurking on 4chan.",
   "icons": {
@@ -14,7 +14,7 @@
     "all_frames": true,
     "run_at": "document_start"
   }],
-  "homepage_url": "http://seaweedchan.github.io/4chan-x/",
+  "homepage_url": "https://github.com/ccd0/4chan-x",
   "minimum_chrome_version": "31",
   "permissions": [
     "storage",
