--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
   "name": "4chan-X",
-  "version": "1.4.1",
+  "version": "1.4.2",
   "description": "Cross-browser userscript for maximum lurking on 4chan.",
   "meta": {
     "name": "4chan X",
-    "repo": "https://github.com/Spittie/4chan-x/",
-    "page": "http://seaweedchan.github.io/4chan-x/",
+    "repo": "https://github.com/ccd0/4chan-x/",
+    "page": "https://github.com/ccd0/4chan-x",
     "buildsPath": "builds/",
     "mainBranch": "master",
     "matches": [
@@ -40,7 +40,7 @@
   },
   "repository": {
     "type": "git",
-    "url": "https://github.com/seaweedchan/4chan-x.git"
+    "url": "https://github.com/ccd0/4chan-x.git"
   },
   "author": "seaweedchan <jtbates@asu.edu>",
   "contributors": [
