--- a/builds/crx/manifest.json
+++ b/builds/crx/manifest.json
@@ -15,6 +15,7 @@
     "run_at": "document_start"
   }],
   "homepage_url": "https://github.com/ccd0/4chan-x",
+  "update_url": "https://github.com/ccd0/4chan-x/raw/master/builds/updates.xml",
   "minimum_chrome_version": "31",
   "permissions": [
     "storage",
