--- a/src/General/meta/manifest.json
+++ b/src/General/meta/manifest.json
@@ -15,6 +15,7 @@
     "run_at": "document_start"
   }],
   "homepage_url": "<%= meta.page %>",
+  "update_url": "<%= meta.repo %>raw/master/builds/updates.xml",
   "minimum_chrome_version": "<%= meta.min.chrome %>",
   "permissions": [
     "storage",
