--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "name": "4chan X",
     "repo": "https://github.com/ccd0/4chan-x/",
     "page": "https://github.com/ccd0/4chan-x",
+    "downloads": "https://ccd0.github.io/4chan-x/builds/",
     "buildsPath": "builds/",
     "mainBranch": "master",
     "matches": [
