--- a/src/General/meta/manifest.json
+++ b/src/General/meta/manifest.json
@@ -14,8 +14,7 @@
     "all_frames": true,
     "run_at": "document_start"
   }],
-  "homepage_url": "<%= meta.page %>",
-  "update_url": "<%= meta.downloads %>updates.xml",
+  "homepage_url": "<%= meta.page %>",=
   "minimum_chrome_version": "<%= meta.min.chrome %>",
   "permissions": [
     "storage",
