--- a/package.json
+++ b/package.json
@@ -28,17 +28,17 @@
   },
   "devDependencies": {
     "font-awesome": "~4.0.3",
-    "grunt": "~0.4.2",
-    "grunt-bump": "~0.0.13",
-    "grunt-concurrent": "~0.4.3",
+    "grunt": "~0.4.4",
+    "grunt-bump": "0.0.13",
+    "grunt-concurrent": "~0.5.0",
     "grunt-contrib-clean": "~0.5.0",
-    "grunt-contrib-coffee": "~0.8.2",
-    "grunt-contrib-compress": "~0.6.0",
-    "grunt-contrib-concat": "~0.3.0",
+    "grunt-contrib-coffee": "~0.10.1",
+    "grunt-contrib-compress": "~0.8.0",
+    "grunt-contrib-concat": "~0.4.0",
     "grunt-contrib-copy": "~0.5.0",
-    "grunt-contrib-watch": "~0.5.3",
-    "grunt-shell": "~0.6.4",
-    "load-grunt-tasks": "~0.2.1"
+    "grunt-contrib-watch": "~0.6.1",
+    "grunt-shell": "~0.7.0",
+    "load-grunt-tasks": "~0.4.0"
   },
   "repository": {
     "type": "git",
