--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "repo": "https://github.com/ccd0/4chan-x/",
     "page": "https://github.com/ccd0/4chan-x",
     "downloads": "https://ccd0.github.io/4chan-x/builds/",
+    "faq": "https://github.com/ccd0/4chan-x/wiki/Frequently-Asked-Questions",
     "appid": "lacclbnghgdicfifcamcmcnilckjamag",
     "buildsPath": "builds/",
     "mainBranch": "master",
